@@ -1,8 +1,11 @@
 Changes with APR-util 0.9.5
 
+  *) Fix corrupt output from the apr_xlate_* interfaces on AIX 4.x.
+     [Joe Orton]
+
   *) Change the order in which ldap.h and lber.h are defined, to fix
      a compile bug in Solaris v2.8 which requires lber.h then ldap.h.
-     PR 27379 [Andrew Connors <andy.connors@idea.com>]
+     PR 27379.  [Andrew Connors <andy.connors idea.com>]
  
   *) Restore support for SHA1 passwords in apr_validate_password.
      PR 17343.  [Paul Querna <chip force-elite.com>]
